# 360-video-streaming

./: client.py  errors.out  h264.py  read_camera.py  readme.md  requirements.txt  server.py  test_client.py  test_server.py
streamers/ffenc_uiuc/: CMakeLists.txt  h264.py
streamers/ffenc_uiuc/ffdec/: ffdec.cc
streamers/ffenc_uiuc/ffenc/: ffenc.cc
viz/: viz.ipynb
